k8s/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-ui
  namespace: test
  labels:
    app: company-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-ui
  template:
    metadata:
      labels:
        app: company-ui
    spec:
      imagePullSecrets:
      - name: my-docker-secret
      containers:
      - name: company-ui
        image: $(IMAGE_NAME):$(TAG)-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
