k8s/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: transcure-ui
  namespace: test
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: transcure-ui
