k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transcure-ingress
  namespace: test
spec:
  rules:
  - host: transcure.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transcure-ui
            port:
              number: 80
